Added Star wars square

--- a/squares.css
+++ b/squares.css
@@ -392,3 +392,23 @@
     background-color: lightsteelblue;
     border: outset steelblue 8px;
 }
+
+.star-wars {
+    height: 250px;
+    width: 250px;
+    padding: 20px;
+    font-family: sans-serif;
+    color: #FFD339;
+    background-image: url("images/stars.jpg");
+    perspective: 100px;
+    position: relative;
+}
+
+.star-wars p {
+    transform: rotateX(30deg);
+    color: #FFD339;
+    max-width: 200px;
+    max-height: 200px;
+    position: absolute;
+    top: 0;
+}
