--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,8 @@ h2 {
 
 .square {
     display: inline;
-    min-width: 250px;
-    min-height: 250px;
+    width: 250px;
+    height: 250px;
     box-shadow: 5px 5px 10px darkgrey;
     display: flex;
     align-items: center;
