--- a/css/parallax.css
+++ b/css/parallax.css
@@ -37,7 +37,7 @@
   right: 0;
   top: 0;
   display: block;
-  background-color: #8a8;
+  background-color: lightsteelblue;
   background-image: url("/images/para.jpg");
   background-size: cover;
   -webkit-transform-origin: center center 0;
