updated: para image

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -38,7 +38,7 @@
   top: 0;
   display: block;
   background-color: lightsteelblue;
-  background-image: url("/images/para.jpg");
+  background-image: url("/images/para1.jpg");
   background-size: cover;
   -webkit-transform-origin: center center 0;
   -webkit-transform: translateZ(-1px) scale(2);
